# ProyectoII-LetsPlay

./: .gitignore  CMakeLists.txt  README.md
BallWindowSettings/: ballwindowsettings.cpp  ballwindowsettings.h  mainwindow.cpp  mainwindow.ui
Forms/: puzzlewindow.ui
Headers/: BoardManger.h  Chromosome.h  ConectionManager.h  Direction.h  GeneticSolver.h  Puzzle.h  PuzzleGrid.h  PuzzlePiece.h  ball.h  ballwindowsettings.h  bpsettings.h  doxyfile  foosballwindow.h  gpsettings.h  mainwindow.h  player.h  puzzlewindow.h
Headers/html/: Chromosome_8h_source.html  Direction_8h_source.html  GeneticSolver_8h_source.html  PuzzleGrid_8h_source.html  PuzzlePiece_8h_source.html  annotated.html  classChromosome-members.html  classChromosome.html  classGPSettings-members.html  classGPSettings.html  classGPSettings__coll__graph.dot  classGeneticSolver-members.html  classGeneticSolver.html  classMainWindow-members.html  classMainWindow.html  classPuzzleGrid-members.html  classPuzzleGrid.html  classPuzzlePiece-members.html  classPuzzlePiece.html  classes.html  classpuzzlewindow-members.html  classpuzzlewindow.html  classpuzzlewindow__inherit__graph.dot  files.html  functions.html  functions_func.html  gpsettings_8h_source.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherit_graph_3.dot  menudata.js  (+5 more)
Menu/: Menu.pro  bpgamesettings.cpp  bpgamesettings.h  bpgamesettings.ui  gpsettings.cpp  gpsettings.h  gpsettings.ui  mainwindow.cpp  mainwindow.h  puzzlesettings.cpp  puzzlesettings.h  puzzlesettings.ui
Sources/: BoardManger.cpp  Chromosome.cpp  ConectionManager.cpp  GeneticSolver.cpp  Puzzle.cpp  PuzzleGrid.cpp  PuzzlePiece.cpp  ball.cpp  ballwindowsettings.cpp  ballwindowsettings.h  bpsettings.cpp  bpsettings.ui  foosballwindow.cpp  gpsettings.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  player.cpp  puzzlewindow.cpp  puzzlewindow.ui
futbolin/: ballwindowsettings.cpp  ballwindowsettings.ui  bpsettings.cpp  bpsettings.h  bpsettings.ui  futbolin.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+38 files in other folders)
